--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -1,5 +1,5 @@
 .contacts {
-	padding-top: 20px;
+	padding-top: 24px;
 }
 
 .contacts__wrapper {
@@ -82,7 +82,7 @@
 	}
 	.contacts {
 		position: relative;
-		padding-top: 64px;
+		padding-top: 83px;
 		padding-bottom: 18px;
 	}
 	.contacts__icon {
