--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -16,9 +16,24 @@
 	}
 }
 
+@media #{$mobile-widths}{
+	.reviews::before{
+		content: "";
+    position: absolute;
+    background-image: url(../img/bg-zigzag-line.svg);
+    background-position: 0 0px;
+    background-repeat: repeat-x;
+    background-size: contain;
+    min-height: 7px;
+    z-index: 100;
+    width: 100%;
+    left: 0;
+    margin-top: 640px;
+	}
+}
 .reviews__title {
 	@include heading-h2;
-	padding-top: 15px;
+	padding-top: 16px;
 	margin-bottom: 25px;
 }
 
